knn cleanup + saved file

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ __pycache__/analyze.cpython-39.pyc
 __pycache__/CVAE.cpython-39.pyc
 __pycache__/io_data.cpython-39.pyc
 __pycache__/utils.cpython-39.pyc
+test_real_data_overlay.png
+README.md
+.ipynb_checkpoints/classifier_benchmark-checkpoint.ipynb
+io_data.py
+io_data.py
