--- a/.gitignore
+++ b/.gitignore
@@ -980,3 +980,6 @@ temp_objects/power_analysis/power_analysis.pkl
 temp_objects/calcUmap_adata_mixed_cellID.pkl
 .ipynb_checkpoints/colocalization-checkpoint.ipynb
 temp_objects/power_analysis_allStrength_withoutReplacement_to5000_fixedDefaultPattern.pkl
+__pycache__/_resampling.cpython-39.pyc
+__pycache__/latent_statistics.cpython-39.pyc
+__pycache__/resampling.cpython-39.pyc
