finished apical basal, updated chamfer to gpu

--- a/.gitignore
+++ b/.gitignore
@@ -983,3 +983,7 @@ temp_objects/power_analysis_allStrength_withoutReplacement_to5000_fixedDefaultPa
 __pycache__/_resampling.cpython-39.pyc
 __pycache__/latent_statistics.cpython-39.pyc
 __pycache__/resampling.cpython-39.pyc
+images/power_analysis/uncorrected_7000_logscale.png
+images/power_analysis/uncorrected_7000_logscale.png
+images/power_analysis/uncorrected_7000_logscale.png
+images/power_analysis/uncorrected_7000_logscale.png
