power multiprocess permutation gpu

--- a/.gitignore
+++ b/.gitignore
@@ -987,3 +987,20 @@ images/power_analysis/uncorrected_7000_logscale.png
 images/power_analysis/uncorrected_7000_logscale.png
 images/power_analysis/uncorrected_7000_logscale.png
 images/power_analysis/uncorrected_7000_logscale.png
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_bonferroniCorrected_fixedDefaultPattern.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_fixedDefaultPattern.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_bonferroniCorrected.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_uncorrected.pkl
+temp_objects/power_analysis/power_analysis_allStrength_withoutReplacement_to5000_fixedDefaultPattern.pkl
+temp_objects/power_analysis/power_analysis_allStrength_withoutReplacement_to7000_bonferroniCorrected_fixedDefaultPattern.pkl
+temp_objects/power_analysis/power_analysis_allStrength_withoutReplacement_to7000_fixedDefaultPattern.pkl
+temp_objects/power_analysis/power_analysis_allStrength_withoutReplacement_to7000_logscale_bonferroniCorrected.pkl
+temp_objects/power_analysis/power_analysis_allStrength_withoutReplacement_to7000_logscale_uncorrected.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_bonferroniCorrected_fixedDefaultPattern.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_fixedDefaultPattern.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_bonferroniCorrected.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_uncorrected.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_bonferroniCorrected_fixedDefaultPattern.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_fixedDefaultPattern.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_bonferroniCorrected.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_uncorrected.pkl
