working version of power_analysis, pooled at params

--- a/.gitignore
+++ b/.gitignore
@@ -1004,3 +1004,24 @@ temp_objects/power_analysis_allStrength_withoutReplacement_to7000_bonferroniCorr
 temp_objects/power_analysis_allStrength_withoutReplacement_to7000_fixedDefaultPattern.pkl
 temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_bonferroniCorrected.pkl
 temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_uncorrected.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_bonferroniCorrected_fixedDefaultPattern.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_fixedDefaultPattern.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_bonferroniCorrected.pkl
+temp_objects/power_analysis_allStrength_withoutReplacement_to7000_logscale_uncorrected.pkl
+temp_objects/rf_balanced/rf_balanced_mixedID.pkl
+temp_objects/rf_balanced/rf_balanced_splitID_conda_cell2.pkl
+temp_objects/rf_balanced/rf_balanced_splitID.pkl
+temp_objects/rf_balanced/pattern_vs_other/cell-edge.pkl
+temp_objects/rf_balanced/pattern_vs_other/cell2_pericellular_balanced_inclRandom.pkl
+temp_objects/rf_balanced/pattern_vs_other/cell2_pericellular_balanced.pkl
+temp_objects/rf_balanced/pattern_vs_other/cell2_pericellular_unbalanced.pkl
+temp_objects/rf_balanced/pattern_vs_other/extranuclear.pkl
+temp_objects/rf_balanced/pattern_vs_other/foci.pkl
+temp_objects/rf_balanced/pattern_vs_other/intranuclear.pkl
+temp_objects/rf_balanced/pattern_vs_other/nuclear-edge.pkl
+temp_objects/rf_balanced/pattern_vs_other/pericellular.pkl
+temp_objects/rf_balanced/pattern_vs_other/perinuclear.pkl
+temp_objects/rf_balanced/pattern_vs_other/protrusion.pkl
+temp_objects/rf_pericellular/rf_balanced.pkl
+temp_objects/rf_pericellular/rf_unbalanced_inclRandom.pkl
+temp_objects/rf_pericellular/rf_unbalanced.pkl
