--- a/.gitignore
+++ b/.gitignore
@@ -1029,3 +1029,8 @@ app.log
 permute.log
 test.log
 temp_objects/dict_f1_TP.csv
+__pycache__/power_analysis.cpython-39.pyc
+images/power_analysis/permutation_linearscale.png
+images/power_analysis/permutation_simulatedGenes.png
+temp_objects/power_analysis_permutationLatent_to7000_logscale_bonferroni.pkl
+temp_objects/power_analysis_permutationLatent_to7000_logscale_uncorrected.pkl
