--- a/.gitignore
+++ b/.gitignore
@@ -1034,3 +1034,11 @@ images/power_analysis/permutation_linearscale.png
 images/power_analysis/permutation_simulatedGenes.png
 temp_objects/power_analysis_permutationLatent_to7000_logscale_bonferroni.pkl
 temp_objects/power_analysis_permutationLatent_to7000_logscale_uncorrected.pkl
+power_analysis.py
+temp_objects/rf_pattern_nonpattern_balanced_cell2.pkl
+temp_objects/rf_pattern_nonpattern_balanced.pkl
+temp_objects/rf_pattern_nonpattern_unbalanced_cell2.pkl
+temp_objects/rf_pattern_nonpattern_unbalanced.pkl
+temp_objects/rf_balanced/rf_pericellular_balanced_cell2.pkl
+temp_objects/rf_balanced/rf_pericellular_balanced_inclRandom_cell2.pkl
+power_analysis.py
